practice/ch05/7.Network_Policy/1-pod01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-pod01
  labels:
    app: network-policy-pod01
spec:
  containers:
  - name: nginx
    image: nginx  # binding된 port가 80인 이미지 
    ports:
    - containerPort: 80
