practice/ch05/7.Network_Policy/2-pod02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-policy-pod02
  labels:
    app: network-policy-pod02
spec:
  containers:
  - name: nginx
    image: josunghwan/nginx:v1  # binding된 port가 8081인 이미지 
    ports:
    - containerPort: 8081
